tests/snapshots/examples_fixtures/type_system__failing__27_adt_wildcard_guard_not_catchall.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/27_adt_wildcard_guard_not_catchall.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 2 missing patterns.

  examples/type_system/failing/27_adt_wildcard_guard_not_catchall.flx:32:5
   |
32 |     match c {
   |     ^^^^^^^^^
33 |         _ if true -> 1,
   | ^^^^^^^^^^^^^^^^^^^^^^^
34 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
